--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
 <body>
 <!-- HEADER -->
     <header>
-        <!-- Logo -->
-        <img src="./img/logo_instagram.jpg" alt="">
-        <!-- Menu -->
-        <nav>
-            <a href="#">inicio</a><a href="#">servicios</a><a href="#">galeria</a><a href="#">contactar</a>
+        <!-- Logo & Menu -->
+        <img class="logo" src="./img/logo_instagram.jpg" alt="logo instagram>
+
+        <nav class="menuprincipal">
+            <a class="menuprincipal__inicio" href="#">inicio</a>
+            <a class="menuprincipal__servicios" href="#">servicios</a>
+            <a class="menuprincipal__galeria" href="#">galeria</a>
+            <a class="menuprincipal__contactar" href="#">contactar</a>
+
         </nav>
 
     </header>
@@ -22,13 +26,13 @@
 <!-- MAIN -->
     <main>
         <!-- Banner inicio -->
-        <img src="./img/banner_inicio.jpg" alt="banner_inicio">
+        <img src="./img/banner_inicio.jpg" alt="info letras">
         <!-- Título -->
         <h1>Flores de Temporada en Mallorca</h1>
         <!-- Article flores -->
         <article>
             <figure>
-                <img src="./img/mujer_flores.jpg" alt="mujer_flores">
+                <img src="./img/mujer_flores.jpg" alt="mujer flores">
                 <figcaption>
                     <h2>Flores de Primavera</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum a mauris at eget massa pellentesque in. Imperdiet urna mi fermentum, ac sit aliquam, tempus purus non. Arcu nibh pellentesque suspendisse vitae sit proin. Neque, volutpat amet enim, cursus.
@@ -46,10 +50,10 @@
                 </figcaption>
             </figure>
         </article>
-</main>
+    </main>
 
 <!-- FOOTER -->
-<footer>
+    <footer>
     <!-- Redes Sociales -->
     <ul>
         <li><h5>Redes Sociales</h5></li>
@@ -67,7 +71,7 @@
 
     <!-- Copiright -->
     <h6>Copyright 2021 - Práctica que va a puntuar en el próximo examen</h6>
-</footer>
+    </footer>
 
 </body>
 </html>
