--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <!-- HEADER -->
     <header>
         <!-- Logo & Menu -->
-        <img class="logo" src="./img/logo_instagram.jpg" alt="logo instagram>
-
+        <img class="logo" src="./img/logo_instagram.jpg" alt="logo instagram">
         <nav class="menuprincipal">
             <a class="menuprincipal__inicio" href="#">inicio</a>
             <a class="menuprincipal__servicios" href="#">servicios</a>
@@ -20,32 +19,32 @@
             <a class="menuprincipal__contactar" href="#">contactar</a>
 
         </nav>
-
+        
     </header>
 
 <!-- MAIN -->
     <main>
         <!-- Banner inicio -->
-        <img src="./img/banner_inicio.jpg" alt="info letras">
+        <img class="banner" src="./img/banner_inicio.jpg" alt="info letras">
         <!-- Título -->
-        <h1>Flores de Temporada en Mallorca</h1>
+        <h1 class="titulo">Flores de Temporada en Mallorca</h1>
         <!-- Article flores -->
-        <article>
-            <figure>
-                <img src="./img/mujer_flores.jpg" alt="mujer flores">
-                <figcaption>
-                    <h2>Flores de Primavera</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum a mauris at eget massa pellentesque in. Imperdiet urna mi fermentum, ac sit aliquam, tempus purus non. Arcu nibh pellentesque suspendisse vitae sit proin. Neque, volutpat amet enim, cursus.
+        <article class="articulosup">
+            <figure class="articulosup__flores">
+                <img class="articulosup__flores__foto" src="./img/mujer_flores.jpg" alt="mujer flores">
+                <figcaption class="articulosup__flores__texto">
+                    <h2 class="articulosup__flores__texto__titulo">Flores de Primavera</h2>
+                    <p class="articulosup__flores__texto__parrafo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum a mauris at eget massa pellentesque in. Imperdiet urna mi fermentum, ac sit aliquam, tempus purus non. Arcu nibh pellentesque suspendisse vitae sit proin. Neque, volutpat amet enim, cursus.
                         Amet gravida eget aliquam arcu, consequat ut neque non. Vel consequat arcu in aliquam. Sem ornare vitae gravida sed diam sagittis in. Senectus mus cursus cum tortor mauris turpis pretium. </p>
                 </figcaption>
             </figure>
         </article>
         <!-- Article fachada -->
-        <article>
-            <figure>
-                <img src="./img/fachada.jpg" alt="fachada">
-                <figcaption>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum a mauris at eget massa pellentesque in. Imperdiet urna mi fermentum, ac sit aliquam, tempus purus non. Arcu nibh pellentesque suspendisse vitae sit proin. Neque, volutpat amet enim, cursus.
+        <article class="articuloinf">
+            <figure class="articuloinf__fachada">
+                <img class="articuloinf__fachada__foto" src="./img/fachada.jpg" alt="fachada">
+                <figcaption class="articuloinf__fachada__texto">
+                    <p class="articuloinf__fachada__texto__parrafo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum a mauris at eget massa pellentesque in. Imperdiet urna mi fermentum, ac sit aliquam, tempus purus non. Arcu nibh pellentesque suspendisse vitae sit proin. Neque, volutpat amet enim, cursus.
                         Amet gravida eget aliquam arcu, consequat ut neque non. Vel consequat arcu in aliquam. Sem ornare vitae gravida sed diam sagittis in. Senectus mus cursus cum tortor mauris turpis pretium. </p>
                 </figcaption>
             </figure>
@@ -55,22 +54,22 @@
 <!-- FOOTER -->
     <footer>
     <!-- Redes Sociales -->
-    <ul>
-        <li><h5>Redes Sociales</h5></li>
-        <li>Instagram</li>
-        <li>Twitter</li>
-        <li>Pinterest</li>
+    <ul class="redes">
+        <li class="redes__titulo"><h5>Redes Sociales</h5></li>
+        <li class="redes__instagram">Instagram</li>
+        <li class="redes__twitter">Twitter</li>
+        <li class="redes__pinterest">Pinterest</li>
     </ul>
 
     <!-- Legal -->
-    <ul>
-        <li><h5>Legal</h5></li>
-        <li>Cookies</li>
-        <li>Términos y Condiciones</li>
+    <ul class="legal">
+        <li class="legal__titulo"><h5>Legal</h5></li>
+        <li class="legal__cookies">Cookies</li>
+        <li class="legal__terminos">Términos y Condiciones</li>
     </ul>
 
     <!-- Copiright -->
-    <h6>Copyright 2021 - Práctica que va a puntuar en el próximo examen</h6>
+    <h6 class="copyright">Copyright 2021 - Práctica que va a puntuar en el próximo examen</h6>
     </footer>
 
 </body>
