--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
     <link rel="stylesheet" href="./css/estilos.css">
 </head>
 <body>
+    <section class="contenido">
+
 <!-- HEADER -->
     <header>
         <!-- Logo & Menu -->
         <img class="logo" src="./img/logo_instagram.jpg" alt="logo instagram">
         <nav class="menuprincipal">
-            <a class="menuprincipal__inicio" href="#">inicio</a>
-            <a class="menuprincipal__servicios" href="#">servicios</a>
-            <a class="menuprincipal__galeria" href="#">galeria</a>
-            <a class="menuprincipal__contactar" href="#">contactar</a>
+            <a class="menuprincipal__inicio" href="#">Inicio</a>
+            <a class="menuprincipal__servicios" href="#">Servicios</a>
+            <a class="menuprincipal__galeria" href="#">Galeria</a>
+            <a class="menuprincipal__contactar" href="#">Contactar</a>
 
         </nav>
         
@@ -72,6 +74,6 @@
     <!-- Copiright -->
     <h6 class="copyright">Copyright 2021 - Práctica que va a puntuar en el próximo examen</h6>
     </footer>
-
+</section>
 </body>
 </html>
