--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 
 <!-- FOOTER -->
     <footer>
+        <section class="final">
     <!-- Redes Sociales -->
     <ul class="redes">
         <li class="redes__titulo"><h5>Redes Sociales</h5></li>
@@ -72,7 +73,10 @@
     </ul>
 
     <!-- Copiright -->
-    <h6 class="copyright">Copyright 2021 - Práctica que va a puntuar en el próximo examen</h6>
+        <h6 class="copyright">Copyright 2021 - Práctica que va a puntuar en el próximo examen</h6>
+
+</section>
+
     </footer>
 </section>
 </body>
